# PoE-FilterScript

./: .gitattributes  .gitignore  FilterScript.cabal  README.md  flc  package.json
examples/: pwnita.fs  ziggy.fs
src/: BasicCategories.hs  Filter.hs  Main.hs  ScriptParser.hs
src/c++/qt-gui/: mainwindow.cpp  mainwindow.hpp  mainwindow.ui  qt-gui.pro
src/coffeescript/: index.html  main.coffee  runFlc.coffee  style.css
src/gui/: Main.hs
src/haskell/: BaseTypeList.hs  BasicCategories.hs  BuildInCategories.hs  Category.hs  EmbeddedLootLanguage.hs  Filter.hs  LootScriptLanguage.hs  Main.hs  ScriptParser.hs  Style.hs  Types.hs
src/javascript/: index.html  main.js  runFlc.js  style.css
