name:                FilterScript
version:             1.0.1.1
synopsis:            A simplistic scripting language for Path of Exiles itemfilters

license:             BSD3
license-file:        LICENSE
author:              Oliver Westphal
maintainer:          o_westphal@online.de

category:            Development
build-type:          Simple

cabal-version:       >=1.10

library
  exposed-modules:     EmbeddedLootLanguage

  other-modules:       Category,
                       Style,
                       Filter,
                       BasicCategories
  build-depends:       base
  hs-source-dirs:      src/haskell
  default-language:    Haskell2010

executable flc
  main-is:             Main.hs
  other-modules:       LootScriptLanguage,
                       ScriptParser,
                       Types,
                       Paths_FilterScript

  ghc-options:         -Wall -fno-warn-missing-signatures -O2
  build-depends:       base, parsec, transformers, mtl

  hs-source-dirs:      src/haskell

  default-language:    Haskell2010
