name:                FilterScript
version:             1.1.0.1
synopsis:            A simplistic scripting language for Path of Exiles itemfilters

license:             BSD3
license-file:        LICENSE
author:              Oliver Westphal
maintainer:          o_westphal (a) online.de

category:            Development
build-type:          Simple

cabal-version:       >=1.10

executable flc
  main-is:             Main.hs
  other-modules:       LootScriptLanguage,
                       ScriptParser,
                       BuildInCategories,
                       Types,
                       Paths_FilterScript

  ghc-options:         -Wall -fno-warn-missing-signatures -O2
  build-depends:       base, parsec, transformers, mtl, LootLanguage >= 0.2

  hs-source-dirs:      src/haskell

  default-language:    Haskell2010
